--- a/translations/ghost+intl-icu.es.xlf
+++ b/translations/ghost+intl-icu.es.xlf
@@ -654,7 +654,7 @@
       </notes>
       <segment>
         <source>Abstimmung aller Piktogramme:</source>
-        <target>Recompensar todas las distinciones:</target>
+        <target>Recompensar todas las Distinciones:</target>
       </segment>
     </unit>
     <unit id="WjDyWyC">
@@ -664,7 +664,7 @@
       </notes>
       <segment>
         <source>Gibt die Gesamtheit der während der Stadt erhaltenen Piktogramme an, anstatt ein Drittel davon.</source>
-        <target>Da el total de distinciones obtenidas en el pueblo en lugar de sólamente una tercera parte.</target>
+        <target>Da el total de Distinciones obtenidas en el pueblo en lugar de sólamente una tercera parte.</target>
       </segment>
     </unit>
     <unit id="vLYm3DY" name="Seelenpunkte vergeben:">
