--- a/translations/admin+intl-icu.es.xlf
+++ b/translations/admin+intl-icu.es.xlf
@@ -4349,7 +4349,7 @@
       </notes>
       <segment>
         <source>Diese Auszeichnung wird nicht verdient, wenn der Bürger heute Nacht stirbt.</source>
-        <target>Esta distinción no se otorgará si el habitante muere esta noche.</target>
+        <target>Esta Distinción no se otorgará si el habitante muere esta noche.</target>
       </segment>
     </unit>
     <unit id="WJg1nZp" name="Diese Auszeichnung wurde verdient.">
@@ -4359,7 +4359,7 @@
       </notes>
       <segment>
         <source>Diese Auszeichnung wurde verdient.</source>
-        <target>Se ha otorgado la distinción.</target>
+        <target>Se ha otorgado la Distinción.</target>
       </segment>
     </unit>
     <unit id="I2eWURG" name="Freundesliste">
