ES double quote fix

--- a/translations/welcome+intl-icu.es.xlf
+++ b/translations/welcome+intl-icu.es.xlf
@@ -358,7 +358,7 @@
       </notes>
       <segment>
         <source>Je besser ihr euch absprecht, desto länger überlebt eure Stadt. Doch ihr Schicksal ist unausweichlich und bereits besiegelt. Der Tod ist Teil von "MyHordes". Doch mit jeder gespielten Stadt lernst du mehr über das Spiel und darüber wie eine erfolgreiche Gemeinschaft funktioniert. Und vielleicht auch über dich... Die erfolgreichsten Städte und Spieler erscheinen in einer Saison-Rangliste.</source>
-        <target>Mientras mejor se coordinen, más tiempo sobrevivirá su pueblo. Pero su destino es inevitable y ya está sellado. La muerte es parte de "MyHordes." Pero con cada pueblo que juegues, aprenderás más sobre el juego y cómo funciona una comunidad exitosa. Y tal vez también sobre ti mismo... Los pueblos y jugadores más exitosos aparecen en la clasificación de la temporada.</target>
+        <target>Mientras mejor se coordinen, más tiempo sobrevivirá su pueblo. Pero su destino es inevitable y ya está sellado. La muerte es parte de "MyHordes". Pero con cada pueblo que juegues, aprenderás más sobre el juego y cómo funciona una comunidad exitosa. Y tal vez también sobre ti mismo... Los pueblos y jugadores más exitosos aparecen en la clasificación de la temporada.</target>
       </segment>
     </unit>
     <unit id="y3NV_XP" name="Der Preis">
