ES noun number correction

--- a/translations/welcome+intl-icu.es.xlf
+++ b/translations/welcome+intl-icu.es.xlf
@@ -409,7 +409,7 @@
       </notes>
       <segment>
         <source>Die letzten Updates ansehen:</source>
-        <target>Acceder a actualizacion mayores previas:</target>
+        <target>Ver actualizaciones mayores previas:</target>
       </segment>
     </unit>
     <unit id="kiD.2mD" name="Neuigkeiten bei MyHordes">
