ES barbed wire desc Correction (comma -> dot)

--- a/translations/buildings+intl-icu.es.xlf
+++ b/translations/buildings+intl-icu.es.xlf
@@ -2190,7 +2190,7 @@
       </notes>
       <segment>
         <source>Na ja, dieser Stachel"draht" ist noch simpler als der normale... Der Grund: Der Draht fehlt.</source>
-        <target>Esperamos que sirva, no sabemos cómo fue hecho, puesto que en el pueblo no había alambres.</target>
+        <target>Esperamos que sirva. No sabemos cómo fue hecho, puesto que en el pueblo no había alambres.</target>
       </segment>
     </unit>
     <unit id="b82mDa7">
