--- a/translations/docs+intl-icu.en.xlf
+++ b/translations/docs+intl-icu.en.xlf
@@ -125,73 +125,73 @@
     <unit id="XS6yW8K" name="Boolescher Wert, der angibt, ob die Stadt privat ist oder nicht">
       <notes>
         <note category="german">Boolescher Wert, der angibt, ob die Stadt privat ist oder nicht</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
         <note category="from">twig:///templates/ajax/public/apidocs.html.twig</note>
       </notes>
       <segment>
         <source>Boolescher Wert, der angibt, ob die Stadt privat ist oder nicht</source>
-        <target>Boolescher Wert, der angibt, ob die Stadt privat ist oder nicht</target>
+        <target>Boolean which indicates whether the town is private or not</target>
       </segment>
     </unit>
     <unit id="IIyH1_p" name="Liste bekannter Zonen">
       <notes>
         <note category="german">Liste bekannter Zonen</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
         <note category="from">twig:///templates/ajax/public/apidocs.html.twig</note>
       </notes>
       <segment>
         <source>Liste bekannter Zonen</source>
-        <target>Liste bekannter Zonen</target>
+        <target>List of known areas</target>
       </segment>
     </unit>
     <unit id="8yQo_c7" name="Liste der Bürger">
       <notes>
         <note category="german">Liste der Bürger</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
         <note category="from">twig:///templates/ajax/public/apidocs.html.twig</note>
       </notes>
       <segment>
         <source>Liste der Bürger</source>
-        <target>Liste der Bürger</target>
+        <target>List of citizens</target>
       </segment>
     </unit>
     <unit id="DPvvGuO" name="Stadtinformationen">
       <notes>
         <note category="german">Stadtinformationen</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
         <note category="from">twig:///templates/ajax/public/apidocs.html.twig</note>
       </notes>
       <segment>
         <source>Stadtinformationen</source>
-        <target>Stadtinformationen</target>
+        <target>Town informations</target>
       </segment>
     </unit>
     <unit id="1flCWsE" name="Liste der Leichen">
       <notes>
         <note category="german">Liste der Leichen</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
         <note category="from">twig:///templates/ajax/public/apidocs.html.twig</note>
       </notes>
       <segment>
         <source>Liste der Leichen</source>
-        <target>Liste der Leichen</target>
+        <target>List of corpses</target>
       </segment>
     </unit>
     <unit id="Duo3rP5" name="Liste der Expeditionen">
       <notes>
         <note category="german">Liste der Expeditionen</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
         <note category="from">twig:///templates/ajax/public/apidocs.html.twig</note>
       </notes>
       <segment>
         <source>Liste der Expeditionen</source>
-        <target>Liste der Expeditionen</target>
+        <target>List of expeditions</target>
       </segment>
     </unit>
     <unit id="wlDIcKF" name="City Creation Season ID">
       <notes>
         <note category="german">Season, in der die Stadt gestartet wurde</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
         <note category="from">twig:///templates/ajax/public/apidocs.html.twig</note>
       </notes>
       <segment>
@@ -202,122 +202,122 @@
     <unit id="5A15fqI" name="UID des Spielers, der Schamane ist">
       <notes>
         <note category="german">UID des Spielers, der Schamane ist</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
         <note category="from">twig:///templates/ajax/public/apidocs.html.twig</note>
       </notes>
       <segment>
         <source>UID des Spielers, der Schamane ist</source>
-        <target>UID des Spielers, der Schamane ist</target>
+        <target>UID of the player who is Shaman</target>
       </segment>
     </unit>
     <unit id="vP9JFiK" name="UID des Spielers, der Reiseleiter in der Außenwel ist">
       <notes>
         <note category="german">UID des Spielers, der Reiseleiter in der Außenwelt ist</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
         <note category="from">twig:///templates/ajax/public/apidocs.html.twig</note>
       </notes>
       <segment>
         <source>UID des Spielers, der Reiseleiter in der Außenwel ist</source>
-        <target>UID des Spielers, der Reiseleiter in der Außenwel ist</target>
+        <target>UID of the player who is Guide</target>
       </segment>
     </unit>
     <unit id="4BJBscB" name="X von der oberen linken Ecke">
       <notes>
         <note category="german">X (von der oberen linken Ecke)</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
         <note category="from">twig:///templates/ajax/public/apidocs.html.twig</note>
       </notes>
       <segment>
         <source>X von der oberen linken Ecke</source>
-        <target>X von der oberen linken Ecke</target>
+        <target>X related the top left corner</target>
       </segment>
     </unit>
     <unit id="SII2qTe" name="Y von der oberen linken Ecke">
       <notes>
         <note category="german">Y (von der oberen linken Ecke)</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
         <note category="from">twig:///templates/ajax/public/apidocs.html.twig</note>
       </notes>
       <segment>
         <source>Y von der oberen linken Ecke</source>
-        <target>Y von der oberen linken Ecke</target>
+        <target>Y related the top left corner</target>
       </segment>
     </unit>
     <unit id="sGpVIDB" name="Heute nicht besucht">
       <notes>
         <note category="german">Heute nicht besucht</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
         <note category="from">twig:///templates/ajax/public/apidocs.html.twig</note>
       </notes>
       <segment>
         <source>Heute nicht besucht</source>
-        <target>Heute nicht besucht</target>
+        <target>Not visited today</target>
       </segment>
     </unit>
     <unit id="9dyupPG" name="Zonen-Tag">
       <notes>
         <note category="german">Zonen-Tag</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
         <note category="from">twig:///templates/ajax/public/apidocs.html.twig</note>
       </notes>
       <segment>
         <source>Zonen-Tag</source>
-        <target>Zonen-Tag</target>
+        <target>Zone tag</target>
       </segment>
     </unit>
     <unit id="ly658p5" name="Gefahrenstufe 0 = grün, 1 = grün-gelb, 2 = orange, 3 = rot, 4 = blau">
       <notes>
         <note category="german">Gefahrenstufe 0 = grün, 1 = grün-gelb, 2 = orange, 3 = rot, 4 = blau</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
         <note category="from">twig:///templates/ajax/public/apidocs.html.twig</note>
       </notes>
       <segment>
         <source>Gefahrenstufe 0 = grün, 1 = grün-gelb, 2 = orange, 3 = rot, 4 = blau</source>
-        <target>Gefahrenstufe 0 = grün, 1 = grün-gelb, 2 = orange, 3 = rot, 4 = blau</target>
+        <target>Danger level 0 = green, 1 = green-yellow, 2 = orange, 3 = red, 4 = blue</target>
       </segment>
     </unit>
     <unit id="y68XZY9" name="Bereichsdetails">
       <notes>
         <note category="german">Zonendetails</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
         <note category="from">twig:///templates/ajax/public/apidocs.html.twig</note>
       </notes>
       <segment>
         <source>Bereichsdetails</source>
-        <target>Bereichsdetails</target>
+        <target>Zone details</target>
       </segment>
     </unit>
     <unit id="ulaMByP" name="Liste der Objekte in diesem Bereich">
       <notes>
         <note category="german">Liste der Objekte in dieser Zone</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
         <note category="from">twig:///templates/ajax/public/apidocs.html.twig</note>
       </notes>
       <segment>
         <source>Liste der Objekte in diesem Bereich</source>
-        <target>Liste der Objekte in diesem Bereich</target>
+        <target>List of objects in this area</target>
       </segment>
     </unit>
     <unit id="4Yz8rlD" name="Informationen zum Gebäude in der Umgebung">
       <notes>
         <note category="german">Informationen zum Gebäude in der Umgebung</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
         <note category="from">twig:///templates/ajax/public/apidocs.html.twig</note>
       </notes>
       <segment>
         <source>Informationen zum Gebäude in der Umgebung</source>
-        <target>Informationen zum Gebäude in der Umgebung</target>
+        <target>Information about the building present in the area</target>
       </segment>
     </unit>
     <unit id="yHlJU_1" name="Die Gebäude-ID">
       <notes>
         <note category="german">Die Gebäude-ID</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
         <note category="from">twig:///templates/ajax/public/apidocs.html.twig</note>
       </notes>
       <segment>
         <source>Die Gebäude-ID</source>
-        <target>Die Gebäude-ID</target>
+        <target>Building ID</target>
       </segment>
     </unit>
     <unit id="jq0ZA8A" name="Die Anzahl der Sandhaufen auf dem Gebäude">
